examples/errors/returns5.spl
foo(): Int {print("Not returning");}

main() {return;}